completed route server

--- a/ExpressServerwithRoutes/publicServe/index.html
+++ b/ExpressServerwithRoutes/publicServe/index.html
@@ -13,6 +13,11 @@
     <h4>/programmers</h4>
     <h4>/programmers/js</h4>
     <h4>/programmers/anylanguage</h4>
+    <h4>/coders</h4>
     <h4>/coders/anyskill/scalevalue  -- how much you know that language on a scale of 10</h4>
+    <h4>/all%20langs  -- lists all skills with scale values</h4>
+    <h4>/add/skill/scale_value  -- to add a skill to skill set</h4>
+    <h4>/search/skill  -- search a skill by its name</h4>
+    <h4>/search/vals/scale_value  -- search skills by their scale_values</h4>
 </body>
 </html>
