json db with frontend

--- a/JSONfileDB-frontend/frontend/index.html
+++ b/JSONfileDB-frontend/frontend/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <h1>Using JSON file as a Database</h1>
-
+    <button id="refreshapi">Refresh Languages from api</button>
+    <button id="refreshjson">Refresh Languages from json db</button>
     <div id="data-div">
-        
+        <h3 id="nod1">NO DETAILS</h3>
+    </div>
+    <hr>
+    <div id="json-div">
+        <h3 id="nod2">NO DETAILS</h3>
     </div>
 
 
